Contrast improvement to colorblindness issue

--- a/css/secomp.css
+++ b/css/secomp.css
@@ -158,7 +158,7 @@ section h2 {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #884343;
+  color: #cc9898;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
@@ -166,7 +166,7 @@ section h2 {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-  color: #884343;
+  color: #cc9898;
 }
 
 #mainNav .navbar-toggler {
